<resources>
    <!-- Settings -->
    <string name="setting_wifi_only">Sync only on wifi</string>
    <string name="setting_default_search_language_base">Default search language #1</string>
    <string name="setting_default_search_language_target">Default search language #2</string>
    <string name="setting_default_order">Questioning way</string>
    <string name="setting_api_url">Word server</string>
    <string name="setting_reset_tutorial">Start the tutorial</string>
    <string name="setting_reset_tutorial_desc">Press this button to see the tutorial again</string>
    <string name="setting_api_server">Set the word server</string>
    <string name="setting_api_server_desc">Changing this setting may prevent the app to work properly!</string>
    <string name="setting_clear_cache">Clear local cache</string>
    <string name="setting_reset_title">Restore default settings</string>
    <string name="setting_reset">Restore default settings</string>
    <string name="setting_progress_loss">You will lose your series progress!</string>
    <string name="setting_advanced">Advanced settings</string>
    <string name="setting_quiz">Quiz settings</string>
    <string name="setting_misc">Miscellaneous settings</string>
    <string name="setting_undefined">Undefined</string>
    <string name="setting_quiz_order_l1_l2"><![CDATA[Word -> Definition]]></string>
    <string name="setting_quiz_order_l2_l1"><![CDATA[Definition -> Word]]></string>
    <string name="setting_will_open_browser">Open the editor page in your browser</string>
    <string name="setting_open_list_editor">Open category editor</string>
    <string name="setting_quiz_order_ask">Always ask</string>

    <!-- Demo -->
    <string name="demo_quiz_translation">Think about the translation of this word</string>
    <string name="demo_quiz_show_answer">Slide your finger LEFT or RIGHT to reveal the answer</string>
    <string name="demo_quiz_show_next">Slide your finger UP if you were correct otherwise slide it DOWN</string>
    <string name="demo_quiz_end">Great! If you were wrong the word will be asked again later</string>
    <string name="demo_select_filter_search">You can search any category by his name.</string>
    <string name="demo_select_filter_spinner">Select a language to filter categories</string>
    <string name="demo_select_category">Select any category to start a quiz!</string>
    <string name="demo_result_progression">Congratulation, you just finished a round! Here\'s a preview of your progress</string>
    <string name="demo_result_about_list">You just finished a round! Words that were right the first time won\'t be asked again</string>
    <string name="demo_result_continue">Press this button to start the next round</string>
    <string name="demo_result_restart">To start over, press the cross icon on the top bar</string>
    <string name="demo_finished">Congratulation! It\'s the end of the tutorial, now it\'s your turn to learn! You can restart this tutorial again in the settings.</string>

    <!-- Quiz -->
    <string name="quiz_progression">%1$d / %2$d</string>
    <string name="quiz_loading_words">Looking for category updates…</string>
    <string name="quiz_no_updates">Category is up to date.</string>
    <string name="quiz_new_version_title">This category is outdated</string>
    <string name="quiz_new_version_content">There\'s a new version for this list. If you update to the last version, your current progress will be lost</string>
    <string name="quiz_restart">Start from over?</string>

    <!-- Result -->
    <string name="result_word_separation">%1$s / %2$s</string>
    <string name="result_quit_quiz">Return to the list selection</string>
    <string name="result_never_missed_final">✓ Never missed (%1$d%% of this list)</string>
    <string name="result_missed_amount_final">✗ Missed %1$d time(s) (%2$d%% of this list)</string>
    <string name="result_never_missed">✓ Never missed</string>
    <string name="result_missed_amount">✗ Missed %1$d time(s)</string>

    <!-- Select -->
    <string name="select_search">Search a list</string>
    <string name="select_list_order">How do you want to learn?</string>
    <string name="select_looking_for_lists">Loading online categories…</string>
    <string name="select_spinner_all">No filter</string>


    <!-- Action bat -->
    <string name="action_title_refresh">Refresh</string>
    <string name="action_title_restart">Start over</string>
    <string name="action_title_settings">Settings</string>

    <!-- Errors -->
    <string name="error_list_empty_title">Empty list</string>
    <string name="error_list_empty_content">No version of this category is available. Try again when you are online.</string>
    <string name="error_wifi_sync_disabled">3G/4G cannot be used to update categories. You can change that in the settings</string>
    <string name="error_cannot_reach_api">Cannot update categories</string>

    <!-- Misc -->
    <string name="app_name">MyVoc</string>
    <string name="action_settings">Settings</string>
    <string name="button_stop_questioning">Stop the quiz</string>
    <string name="button_continue">Continue</string>
    <string name="select_order">%1$s -> %2$s</string>
    <string name="no_categories">No categories available</string>
    <string name="categories_updated">Categories updated</string>
    <string name="word_update_available">New version available</string>
    <string name="word_update_available_desc">A new version of this list is available. Download it will reset your progress!</string>
    <string name="spinner_empty">No languages</string>
    <string name="demo_select_filter">Search and filter lists</string>
</resources>
